design login page and register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,28 @@
 <resources>
     <string name="app_name">Feelae</string>
-    <string name="call_a_psychologist">Appeller un psychologue</string>
-    <string name="add_psy_text">Ajouter psy</string>
+    <string name="call_a_psychologist">Appeller un médecin</string>
+    <string name="add_psy_text">Ajouter un docteur</string>
     <string name="profile_button">Mon profil</string>
-    <string name="monitoring_button">mon suivi</string>
-    <string name="appname">AppName</string>
+    <string name="monitoring_button">Mon suivi</string>
     <string name="waiting_room_cancel_button_text">Annuler</string>
-    <string name="text_accounts">All Accounts</string>
     <string name="hint_name">Name</string>
-    <string name="hint_email">Email</string>
-    <string name="hint_password">Password</string>
-    <string name="hint_confirm_password">Confirm Password</string>
-    <string name="text_login">Login</string>
-    <string name="text_register">Register</string>
-    <string name="error_message_name">Enter Full Name</string>
-    <string name="error_message_email">Enter Valid Email</string>
-    <string name="error_message_age">Enter Age</string>
-    <string name="error_message_password">Enter Password</string>
+    <string name="hint_email">ADRESSE EMAIL</string>
+    <string name="hint_password">MOT DE PASSE</string>
+    <string name="hint_confirm_password">Confirmer le mot de passe</string>
+    <string name="text_login">Se connecter</string>
+    <string name="text_register">S\'enregistrer</string>
+    <string name="error_message_email">Entrer un email valide</string>
+    <string name="error_message_name">Entrer un email valide</string>
+    <string name="error_message_password">Entrer un mot de passe</string>
     <string name="success_message">Registration Successful</string>
     <string name="text_not_member">No account yet? Create one</string>
-    <string name="text_already_member">Already a member? Login</string>
-    <string name="error_email_exists">Email Already Exists</string>
+    <string name="text_already_member">Vous avez déjà un compte ? Créer un compte</string>
     <string name="error_password_match">Password Does Not Matches</string>
     <string name="error_valid_email_password">Wrong Email or Password</string>
     <string name="action_settings">Settings</string>
     <string name="text_hello">Hello,</string>
     <string name="text_title">Android Tutorials Hub</string>
+    <string name="hint_forgot_password">Mot de passe oublié ?</string>
+    <string name="hint_firstname">PRÉNOM</string>
+    <string name="hint_lastname">NOM</string>
 </resources>
